feat(performance): 增强accessor性能和添加JMH测试