@@ -3,10 +3,11 @@ plugins {
 }
 
 dependencies {
-	compileOnly project.findProject(':magic-accessor:annotations') ?: project(':annotations')
 	implementation project.findProject(':magic-accessor:annotations') ?: project(':annotations')
 	annotationProcessor project.findProject(':magic-accessor:compiler') ?: project(':compiler')
-//	implementation 'org.ow2.asm:asm:9.7.1'
+
+	implementation 'org.openjdk.jmh:jmh-core:1.37'
+	annotationProcessor 'org.openjdk.jmh:jmh-generator-annprocess:1.37'
 }
 
 application {
@@ -18,6 +19,46 @@ application {
 }
 
 tasks.named('run', JavaExec) {
+	if (new File("F:/files/java/jdks/openjdk-21.0.2/bin/java.exe").exists()) {
+		executable = "F:/files/java/jdks/openjdk-21.0.2/bin/java.exe"
+	}
+}
+
+tasks.register('jmh', JavaExec) {
+	classpath = sourceSets.main.runtimeClasspath
+	mainClass = 'org.openjdk.jmh.Main'
+	args = [
+		'hope.magic.example.AccessorBenchmark',
+		'-f', '1',
+		'-wi', '2',
+		'-i', '3',
+		'-bm', 'avgt',
+		'-tu', 'ns'
+	]
+	jvmArgs = [
+		'--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED',
+		'--add-exports=java.base/jdk.internal.reflect=ALL-UNNAMED'
+	]
+	if (new File("F:/files/java/jdks/openjdk-21.0.2/bin/java.exe").exists()) {
+		executable = "F:/files/java/jdks/openjdk-21.0.2/bin/java.exe"
+	}
+}
+
+tasks.register('jmhCold', JavaExec) {
+	classpath = sourceSets.main.runtimeClasspath
+	mainClass = 'org.openjdk.jmh.Main'
+	args = [
+		'hope.magic.example.AccessorColdStartBenchmark',
+		'-f', '5',
+		'-wi', '0',
+		'-i', '1',
+		'-bm', 'ss',
+		'-tu', 'us'
+	]
+	jvmArgs = [
+		'--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED',
+		'--add-exports=java.base/jdk.internal.reflect=ALL-UNNAMED'
+	]
 	if (new File("F:/files/java/jdks/openjdk-21.0.2/bin/java.exe").exists()) {
 		executable = "F:/files/java/jdks/openjdk-21.0.2/bin/java.exe"
 	}
